# BluePill

./: .gitignore  CMakeLists.txt  Makefile  cdcacm.c  main.c
host/: CMakeLists.txt  main.cpp
rules.d/: 49-bluepill.rules
